--- a/painel-bibliotecario.html
+++ b/painel-bibliotecario.html
@@ -259,6 +259,10 @@
       </div>
     </div>
 
+    <label>Volume:<br>
+    <input type="text" id="editarVolumeLivro" placeholder="Volume / Edição" value="1">
+    </label>
+
     <label>Quantidade:<br>
       <input type="number" id="editarQuantidadeLivro" required min="1" value="1">
     </label>
@@ -278,6 +282,3 @@
   <script type="module" src="painel.js"></script>
 </body>
 </html>
-
-
-
