--- a/painel-bibliotecario.html
+++ b/painel-bibliotecario.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="souzanilologo.png" type="souzanilologo" />
   <title>Central Bibliotecário</title>
   <link rel="stylesheet" href="painel.css" />
-  <script src="console-block.js"></script>
+  <script type="module" src="console-block.js"></script>
 </head>
 <body class="painel-bg">
 <aside class="sidebar">
