--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="souzanilologo.png" type="souzanilologo">
   <title>Login - Biblioteca Souza Nilo</title>
   <link rel="stylesheet" href="login.css">
-  <script src="console-block.js"></script>
+  <script type="module" src="console-block.js"></script>
 </head>
 <body>
 
